[package]
name = "yxorp"
authors = ["Pufferfish <puffish@puffish.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/pufmat/yxorp"
categories = ["web-programming", "network-programming", "command-line-utilities"]
description = "A reverse proxy with live reload and TLS support."

[dependencies]
futures-util = "0.3.28"
hyper = { version = "0.14", features = ["full"] }
pin-project = "1.1.0"
rustls = "0.21.1"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-util = "0.7.8"
toml = "0.7.4"
wildmatch = "2.1.1"

[profile.release]
lto = true
codegen-units = 1