[package]
name = "yxorp"
authors = ["Pufferfish <puffish@puffish.net>"]
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/pufmat/yxorp"
categories = ["web-programming", "network-programming", "command-line-utilities"]
description = "A reverse proxy with live reload and TLS support."

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["tokio", "server-auto"] }
itertools = "0.13.0"
pin-project = "1.1.5"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-rustls = "0.26.0"
tokio-util = "0.7.11"
toml = "0.8.13"
wildmatch = "2.3.4"

[profile.release]
lto = true
codegen-units = 1
